fix(collapsable-todos): Handle some bugs in collapse

--- a/src/helper/style/_mixin.scss
+++ b/src/helper/style/_mixin.scss
@@ -11,3 +11,9 @@
   border: none;
   outline: none;
 }
+
+@mixin text-overflow {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
